welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:43: error: unclosed comment
  /*if(getX()==6 && getY()==0) {
  ^SnakeBuggle:43: error: unclosed comment
  /*if(getX()==6 && getY()==0) {
  ^SnakeBuggle:43: error: unclosed comment
  /*if(getX()==6 && getY()==0) {
  ^SnakeBuggle:1: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:1: error: expected start of definition
override def run() {
         ^SnakeBuggle:27: error: expected class or object definition
def MurNord(): Boolean= {
^SnakeBuggle:43: error: unclosed comment
  /*if(getX()==6 && getY()==0) {
  ^